--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^7.2.3",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
+    "sass": "^1.45.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
